--- a/Django/home/templates/home/authorized.html
+++ b/Django/home/templates/home/authorized.html
@@ -1,4 +1,6 @@
-<html>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>
         You are in a restricted area.</h1>
-</html>
+{% endblock %}
